--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "server": "node index.js",
+    "server": "nodemon index.js",
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.2",
     "nodemon": "^2.0.5"
   }
 }
