--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.1.2"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "nodemon": "^2.0.5"
