--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.5",
+    "socket.io": "^2.3.0"
   }
 }
