--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "html-react-parser": "^0.14.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.0.0",
     "mongodb": "^3.6.2",
     "nodemon": "^2.0.5",
     "socket.io": "^2.3.0"
