--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "jwt-decode": "^3.0.0",
     "mongodb": "^3.6.2",
     "nodemon": "^2.0.5",
-    "peer": "^0.5.3",
-    "peerjs": "^1.3.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.1"
   }
 }
